packages/webassemblyjs/test/fixtures/type-errors/unary-operand-missing-in-loop/module.wast
(module 
  (func $type-unary-operand-missing-in-loop
    (i32.const 0)
    (loop
      (i32.eqz)
      (drop)
    )
  )
)
